tests/parser/should_fail/type_annotation_5.csp
c1 :: Int=>Event
c2 :: Int=>Event
channel c1, c2 : Int
